--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@angular-devkit/build-angular": "~12.1.0",
     "@angular/cli": "~12.1.0",
     "@angular/compiler-cli": "~12.1.0",
+    "@ngrx/store": "^13.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "ajv": "^6.9.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
